# ferriterc

./: .gitignore  .gitmodules  AGENT.md  DEVELOPMENT.md  INSTALL.md  LICENSE-APACHE  LICENSE-MIT  README.md  REPRODUCIBILITY.md  architecture.txt  compat.toml  ferrite-daemon  ferrite-run  install.sh  manifest.toml  uninstall.sh
ferrite-connectors/: Cargo.toml  config.example.toml
ferrite-connectors/src/: queue.rs  retry.rs
ferrite-connectors/src/sink/: ferrite_ipc.rs  mod.rs
ferrite-connectors/src/sources/: mod.rs  ws.rs
ferrite-gpu-lang/: Cargo.toml  README.md
ferrite-gpu-lang/.cargo/: config.toml
ferrite-gpu-lang/examples/: script_cv_detect.rs  script_handoff.rs  script_hot_state.rs  script_persistent_server.rs  script_runtime.rs  script_speculative_decode.rs  test_argsort.rs  test_gather.rs  test_harden.rs  test_nn_ops.rs  test_where.rs
ferrite-gpu-lang/examples/bench/: bench_ops.rs
ferrite-gpu-lang/examples/capture/: camera_cv.rs  camera_jit.rs
ferrite-gpu-lang/examples/jit/: jit_basic.rs  jit_bench_infix.rs  jit_flight_computer.rs  jit_functions.rs  jit_heavy_math.rs  jit_pipeline.rs  jit_stream_stress.rs  jit_thesis.rs  jit_tiling.rs
ferrite-gpu-lang/examples/scripts/: script_autonomous_agent.rs  script_cv_depth.rs  script_dataflow_pipeline.rs  script_fer_ctx.rs  script_hybrid_pipeline.rs  script_why_ferrite.rs
ferrite-gpu-lang/examples/tests/: test_cumsum.rs  test_index_select.rs  test_jit.rs  test_new_ops.rs  test_topk.rs  test_verbs.rs  test_verbs2.rs
ferrite-gpu-lang/scripts/: run_foundation_stack.sh
ferrite-gpu-lang/src/: context.rs  cpu_kernels.rs  cv.rs  lib.rs  tensor.rs  torch_bridge.rs
ferrite-gpu-lang/src/capture/: bridge.rs  camera.rs  convert.rs  frame.rs  mod.rs
ferrite-gpu-lang/src/jit/: ast.rs  codegen.rs  const_fold.rs  cse.rs  dce.rs  execute.rs  fusion.rs  hir.rs  lexer.rs  lower.rs  lowering.rs  mod.rs  parse.rs  parser.rs  report.rs  validate.rs
ferrite-gpu-lang/src/pipeline/: mod.rs  ring.rs  stage.rs
ferrite-gpu-lang/src/runtime/: context.rs  cpu_tlsf.rs  mod.rs  tensor.rs
ferrite-gpu-lang/src/sensor/: camera_adapter.rs  capture_thread.rs  clock.rs  mod.rs  stream.rs
ferrite-gpu-lang/src/torch/: bridge.rs  dataflow.rs  mod.rs  policy.rs
ferrite-gpu-lang/src/vision/: bbox.rs  draw.rs  mod.rs  ops.rs  tracker.rs
ferrite-os/: Cargo.toml  Makefile  NAVIGATION.md  README.md  env.sh  ferrite-daemon.sh  setup.sh  test-all.sh  test.sh
ferrite-os/.cargo/: config.toml
ferrite-os/.ferrite-cache/jit/: 1ff12ac6625c3f77.json  2ebdd996d052d5f7.json  30828a33e1b4aa15.json  3b7327a546405aea.json  3fa6201aff46f42c.json  4d70402f03348db5.json  4dd5d4b782815660.json  630ce56cccba37b8.json  71ddc59af639c4a6.json  797b5736b08ea37d.json  7c656ae9ba5c5b9b.json  8165f10e3a20e0fa.json  9cf58ec80caeb8c0.json  ac82a622aaa1aafa.json  adedddfc89c71b25.json  f079f4e535dda16b.json  f28ce154443438fe.json  f745ec9791370811.json  fd46a9acb1223062.json
ferrite-os/benchmarks/: ptx_bench_20260207_054042.txt
ferrite-os/core/include/: ptx_debug.h  ptx_hook.h  ptx_stable_runtime.h
ferrite-os/core/include/gpu/: gpu_hot_runtime.h  ptx_torch_allocator.h  tensor_backward.h  tensor_ops.h
ferrite-os/core/include/memory/: ptx_cuda_driver.h  ptx_tlsf_allocator.h
ferrite-os/core/kernels/: os_kernel.cu  tensor_backward.cu  tensor_kernels.cu
ferrite-os/core/kernels/modules/: tensor_kernels_indexing_scan.inl  tensor_kernels_nn_ops.inl
ferrite-os/core/memory/: tlsf_allocator.cu
ferrite-os/core/memory/modules/: tlsf_allocator_api.inl
ferrite-os/core/os/: vmm.cu
ferrite-os/core/runtime/: hot_multi_gpu.cu  hot_runtime.cu  ptx_stable_runtime.cu
ferrite-os/core/runtime/modules/: hot_runtime_init.inl  hot_runtime_prelude.inl  hot_runtime_recovery.inl  hot_runtime_shared_context.inl  hot_runtime_stream_dispatch.inl  hot_runtime_tasks.inl
ferrite-os/ferrite-apps/: Cargo.toml
ferrite-os/ferrite-apps/examples/: __ptx_runfile_54036fce51c3b651.rs  __ptx_runfile_8cc8bae9360ef324.rs  __ptx_runfile_e0a2546c42015e6f.rs
ferrite-os/internal/ptx-compute/: Cargo.toml
ferrite-os/internal/ptx-daemon/: Cargo.toml  HARDWARE_POLLING_DESIGN.md  QUICKSTART.md  README.md  TUI_STYLE_REVIEW_CHECKLIST.md  TUI_VISUAL_DESIGN_GUIDE.md  dev-config.toml  ferrite-daemon.toml
ferrite-os/internal/ptx-kernels/: INTEGRATION_STATUS.md  README.md  build.rs
ferrite-os/internal/ptx-runner/: Cargo.toml
ferrite-os/internal/ptx-sys/: build.rs
ferrite-os/internal/ptx-tensor/: Cargo.toml
ferrite-os/internal/src/: generated_bindings.rs
ferrite-os/ptx-app/: Cargo.toml
ferrite-os/ptx-app/docs/: external-crate-integration.md
ferrite-os/ptx-app/src/: builder.rs  checkpoint.rs  daemon_client.rs  emit.rs  error.rs  lib.rs  resource.rs  restart.rs  tensor_factory.rs
ferrite-os/ptx-app/tests/: integration.rs
ferrite-os/ptx-os/: Cargo.toml
ferrite-os/ptx-os/src/: lib.rs
ferrite-os/ptx-runtime/: Cargo.toml  README.md
ferrite-os/ptx-runtime/examples/: candle_performance_benchmark.rs  dynamic_jit_allocation.rs  event_driven_gpu.rs  extreme_100k_streams.rs  fused_kernel_benchmark.rs  jitter_benchmark.rs  llm_inference_demo.rs  massive_candle_parallelism.rs  memory_efficient_pipelines.rs  neural_layer_inference.rs  parallel_batch_processing.rs  telemetry_demo.rs  transformer_attention_layer.rs
ferrite-os/ptx-runtime/src/: device.rs  error.rs  graph.rs  lib.rs  memory.rs  resilience.rs  runtime.rs  stats.rs  stream.rs  telemetry.rs
ferrite-os/scripts/: ferrite-run  ptx_bench_all.sh  ptx_build.sh  ptx_daemon.service  ptx_daemon.sh  ptx_doctor.sh  ptx_env.sh  release-gate.sh
ferrite-os/tooling/benchmarks/: ptx_bench_.txt  ptx_bench_20260207_053958.txt  ptx_bench_20260207_054528.txt
ferrite-os/tooling/scripts/: detect_sm.cu  ferrite-run  jetson_doctor.sh  ptx_bench_all.sh  ptx_build.sh  ptx_doctor.sh  ptx_env.sh  release-gate.sh
ferrite-os/tui-agent-pipeline/: PLAN_4_CLOSEOUT.txt
ferrite-os/workloads/finetune_engine/: README.md  pull_hf_model.rs  scripting_finetune.rs  streaming_tokenizer.rs
testkit/rust/ferrite-testkit/: Cargo.toml
(+551 files in other folders)
