[package]
name = "ferrite-connectors"
version = "0.1.0"
edition = "2021"
description = "External dataflow connector layer for the Ferrite daemon"

[dependencies]
ureq = "2"
tungstenite = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
signal-hook = "0.3"
rand = "0.8"
sha2 = "0.10"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
