[package]
name = "ferrite-gpu-lang"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust GPU language layer on top of Ferrite PTX-OS runtime"

[dependencies]
thiserror = "1.0"
ptx-runtime = { path = "../ferrite-os/ptx-runtime" }
ptx-kernels = { path = "../ferrite-os/internal/ptx-kernels", features = ["candle-kernels"] }
ptx-tensor = { path = "../ferrite-os/internal/ptx-tensor" }
ferrite-apps = { path = "../ferrite-os/ferrite-apps" }
libc = "0.2"
anyhow = "1.0"
tch = { version = "0.22", optional = true }
aten-ptx = { path = "../external/aten-ptx", optional = true }
cudarc = { path = "../external/cudarc-ptx", optional = true, features = ["ptx-alloc", "cuda-12080"] }
rlsf = "0.2.1"

[features]
default = []
torch = ["dep:tch", "dep:aten-ptx", "dep:cudarc"]

[[example]]
name = "script_cv_depth"
required-features = ["torch"]

[[example]]
name = "script_cv_detect"
required-features = ["torch"]

[[example]]
name = "script_persistent_server"
required-features = ["torch"]

[[example]]
name = "script_speculative_decode"
required-features = ["torch"]

[[example]]
name = "script_autonomous_agent"
required-features = ["torch"]

[[example]]
name = "script_hot_state"
required-features = ["torch"]

[[example]]
name = "script_dataflow_pipeline"
required-features = ["torch"]
