[workspace]
resolver = "2"
members = [
    "ptx-runtime",
    "ptx-os",
    "ferrite-apps",
    "internal/ptx-sys",
    "internal/ptx-compute",
    "internal/ptx-tensor",
    "internal/ptx-autograd",
    "internal/ptx-compiler",
    "internal/ptx-daemon",
    "internal/ptx-renderd",
    "internal/ptx-runner",
    "internal/ptx-kernels",
]
default-members = ["internal/ptx-runner"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["PTX-OS Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ptx-os/ptx-os"

[workspace.dependencies]
# Internal crates
ptx-sys = { path = "internal/ptx-sys" }
ptx-runtime = { path = "ptx-runtime" }
ptx-compute = { path = "internal/ptx-compute" }
ptx-tensor = { path = "internal/ptx-tensor" }
ptx-autograd = { path = "internal/ptx-autograd" }
ptx-compiler = { path = "internal/ptx-compiler" }
ptx-kernels = { path = "internal/ptx-kernels" }

# External dependencies
libc = "0.2"
thiserror = "1.0"
parking_lot = "0.12"
once_cell = "1.19"
half = { version = "2.4", features = ["std"] }
num-traits = "0.2"
smallvec = "1.13"
indexmap = "2.2"
petgraph = "0.6"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# Resilience
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
