[workspace]
resolver = "2"
members = [
    "crates/public/ptx-runtime",
    "crates/public/ptx-os",
    "crates/public/ptx-app",
    "crates/public/ferrite-apps",
    "crates/internal/ptx-sys",
    "crates/internal/ptx-compute",
    "crates/internal/ptx-tensor",
    "crates/internal/ptx-autograd",
    "crates/internal/ptx-compiler",
    "crates/internal/ptx-kernels",
    "crates/internal/ptx-runner",
    "crates/internal/ptx-daemon",
    "crates/internal/ptx-renderd",
    "crates/internal/ferrite-platform",
    "crates/internal/ferrite-connectors",
    "crates/public/ferrite-window",
    "crates/public/ferrite-graphics",
    "crates/internal/ptx-render",
]
default-members = ["crates/internal/ptx-runner"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["PTX-OS Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ptx-os/ptx-os"

[workspace.dependencies]
# Internal crates
ptx-sys = { path = "crates/internal/ptx-sys" }
ptx-runtime = { path = "crates/public/ptx-runtime" }
ptx-compute = { path = "crates/internal/ptx-compute" }
ptx-tensor = { path = "crates/internal/ptx-tensor" }
ptx-autograd = { path = "crates/internal/ptx-autograd" }
ptx-compiler = { path = "crates/internal/ptx-compiler" }
ptx-kernels = { path = "crates/internal/ptx-kernels" }
ptx-app = { path = "crates/public/ptx-app" }
ferrite-platform = { path = "crates/internal/ferrite-platform" }
ptx-render = { path = "crates/internal/ptx-render" }

# External dependencies
libc = "0.2"
thiserror = "1.0"
parking_lot = "0.12"
once_cell = "1.19"
half = { version = "2.4", features = ["std", "bytemuck"] }
num-traits = "0.2"
smallvec = "1.13"
indexmap = "2.2"
petgraph = "0.6"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# Resilience
rand = "0.8"

# Safe type casting
bytemuck = { version = "1.16", features = ["derive"] }

# Quality-of-life
indicatif = "0.17"
directories = "5"
memmap2 = "0.9"
tempfile = "3"
humansize = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
