[package]
name = "ferrite-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Persistent Ferrite-OS runtime daemon"

[[bin]]
name = "ferrite-daemon"
path = "src/main.rs"

[dependencies]
ptx-runtime = { workspace = true }
ptx-sys = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
parking_lot = { workspace = true }
signal-hook = "0.3"
