[package]
name = "ptx-tensor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tensor library backed by PTX-OS GPU runtime"

[dependencies]
ptx-sys = { workspace = true }
ptx-runtime = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
half = { workspace = true }
num-traits = { workspace = true }
smallvec = { workspace = true }
