[package]
name = "ferrite-testkit"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "System-level headless test harness for Ferrite daemon workflows"

[dependencies]
ferrite-platform = { path = "../../../ferrite-os/crates/internal/ferrite-platform" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
