[package]
name = "ferrite-platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Thin platform boundary for Ferrite-OS: abstracts IPC, PID, signals, paths, TTY, and dynamic library env across Unix and Windows"

[dependencies]
libc = { workspace = true }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }

[dev-dependencies]
tempfile = { workspace = true }
