[package]
name = "ptx-kernels"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ptx-sys = { path = "../ptx-sys" }
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]
ptx-runtime = { workspace = true }

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["candle-kernels"]
candle-kernels = []
torch-kernels = []
