[package]
name = "ptx-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Raw FFI bindings to PTX-OS GPU runtime and cuBLAS"
build = "build.rs"

[dependencies]
libc = { workspace = true }

[build-dependencies]
# No bindgen - we use manual bindings for reliability
