[package]
name = "ptx-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-level builder SDK for daemon-native GPU compute applications"

[dependencies]
ptx-runtime = { workspace = true }
ptx-tensor = { path = "../../internal/ptx-tensor" }
ptx-sys = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = { workspace = true }
indicatif = { workspace = true }
directories = { workspace = true }
memmap2 = { workspace = true }
tempfile = { workspace = true }
humansize = { workspace = true }
